tests/NormalTests/paczka2/big_fuzzy/89499159.err
Error in line 25: A482 A328 18,0
Error in line 22: sW72ZlM A482 214,5
Error in line 37: A482 A33 5,5
Error in line 45: A482 A980 44,3
Error in line 32: ORoYdfU A33 20,4
Error in line 49: lvGgVK A980 7,2
Error in line 47: ORoYdfU A328 82,8
Error in line 70: sW72ZlM A482 61,2
Error in line 80: i9hpGmFD A33 318,8
Error in line 79: NN4RK A33 79,9
Error in line 54: PBIhbyLSDQ A33 302,9
Error in line 90: ORoYdfU A980 55,3
Error in line 94: ORoYdfU A33 18,6
Error in line 99: i9hpçmFD A980 82,0
Error in line 101: sW72ZlM A328 82,7
Error in line 115: A482 A33 23,4
Error in line 125: PBIhbyLSDQ A33 91,4
Error in line 126: PBIhbyLSDQ A980 69,3
Error in line 130: lvGgVK 33 56,3
Error in line 143: sW72ZlM A328 84,7
Error in line 147: ORoYdfU A328 18,5
Error in line 146: NN4RK A328 44,2
Error in line 153: ORoYdfU A33 94,7
Error in line 160: i9hpGmFD A33 44,9
Error in line 163: i9hpGmFD A328 77,2
Error in line 173: A482 A980 89,2
Error in line 177: i9hpGmFD A980 41,7
Error in line 192: i9hpGmFD A482 90,0
Error in line 195: i9hpGmFD A980 11,1
Error in line 179: lvGgVK A33 21,3
Error in line 206: lvGgVK A328 146,7
Error in line 225: lvGgVK A980 68,5
Error in line 229: NN4RK A482 58,46
Error in line 224: i9hpGmFD A328 103,1
Error in line 237: sW72ZlM A482 91,2
